# digitize

./: .gitignore  README.md  digitize.py  index.html  package-lock.json  package.json  pyproject.toml
.github/workflows/: publish.yml
src/: digitize.ts  main.ts
src/digitize/: bulk.py  config.py  consts.py  stages.py  units.py
src/digitize/tasks/: simple_eval.py  unit_cascade.py
src/digitize/test_cases/: more.py
